<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">


    <Button
        android:id="@+id/btnMoveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity_without_data" />

    <Button
        android:id="@+id/btnMoveActivityWithData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/data_from_main" />

    <Button
        android:id="@+id/btnMoveWithObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/data_with_object" />
    <Button
        android:id="@+id/btnDialPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/buka_telphone" />

    <Button
        android:id="@+id/btnMoveWithResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_role" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <TextView
        android:id="@+id/tvResultRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_role"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        />


</LinearLayout>